web-infras/parser/tests/fixtures/self-added/await-in-async-context/await-as-func-expr-param-rhs/module-parent-not-current-not/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (2,39)
2|    const child = function name(val = await) {
 |                                     ^
